--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.jjfiv</groupId>
-    <artifactId>galago4</artifactId>
+    <artifactId>rgalago</artifactId>
     <packaging>pom</packaging>
     <version>4.0</version>
-    <name>galago4</name>
+    <name>rgalago</name>
     <licenses>
         <license>
             <name>BSD license</name>
