--- a/tupleflow/pom.xml
+++ b/tupleflow/pom.xml
@@ -2,10 +2,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.github.jjfiv</groupId>
-    <artifactId>galago4</artifactId>
+    <artifactId>rgalago</artifactId>
     <version>4.0</version>
   </parent>
-  <groupId>com.github.jjfiv.galago4</groupId>
+  <groupId>com.github.jjfiv.rgalago</groupId>
   <artifactId>tupleflow</artifactId>
   <packaging>jar</packaging>
   <version>4.0</version>
